Bug 377772 - Wrong syntax highlighting
Summary: Wrong syntax highlighting
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: julia-backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Lakhtanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-18 14:16 UTC by Alexander Semke
Modified: 2018-06-03 08:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Semke 2017-03-18 14:16:35 UTC
define and array of functions trigfunc=[sin,cos] -> sin is not highlighted.
Comment 1 Ivan Lakhtanov 2017-04-02 20:16:17 UTC
We are relying on 'whos' command to get information about current environment. It looks like it produces output of not expected format: backend expects to see 'Function' word for functions as last word, but now it looks like '#<func_name>'.
Comment 2 Nikita Sirgienko 2018-06-02 18:24:04 UTC
Git commit 5c27f77747cb1ef41a56e5678d9fe0886165ec8e by Nikita Sirgienko.
Committed on 02/06/2018 at 18:16.
Pushed by sirgienko into branch 'master'.

Change juliahighligter's regex for nonSeparatingCharacters
FIXED-IN: 18.04.2

M  +1    -1    src/backends/julia/juliahighlighter.cpp

https://commits.kde.org/cantor/5c27f77747cb1ef41a56e5678d9fe0886165ec8e
Comment 3 Alexander Semke 2018-06-03 08:29:35 UTC
Git commit 2462614eae755e295611c816afbaf357ffe6760d by Alexander Semke, on behalf of Nikita Sirgienko.
Committed on 03/06/2018 at 08:29.
Pushed by asemke into branch 'Applications/18.04'.

Change juliahighligter's regex for nonSeparatingCharacters
FIXED-IN: 18.04.2

M  +1    -1    src/backends/julia/juliahighlighter.cpp

https://commits.kde.org/cantor/2462614eae755e295611c816afbaf357ffe6760d