Change juliahighligter's regex for nonSeparatingCharacters

BUG: 377772
FIXED-IN: 18.04.2